# blazert

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BUILDING_ON_WINDOWS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  main_nanort.cc
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: run_tests_linux.yml  run_tests_linux_cmake.yml  run_tests_linux_warnings_as_errors.yml
benchmarks/: CMakeLists.txt  benchmark_main.cpp  benchmark_traversal.cpp
benchmarks/benchmark_BVH/: benchmark_BVH_build.cpp  benchmark_BVH_build_options.cpp  benchmark_BVH_traverse.cpp
benchmarks/benchmark_BVH/realistic/: benchmark_BVH_traverse.cpp
benchmarks/benchmark_BVH/worst_case/: benchmark_BVH_traverse.cpp
benchmarks/benchmark_helper/: OriginMesh.cpp  OriginMesh.h  OriginSphere.cpp  OriginSphere.h
benchmarks/benchmark_mesh_size/: benchmark_build_BVH.cpp  benchmark_traverse_BVH.cpp  benchmark_triangle_size.cpp
blazert/: blazert.h  datatypes.h  defines.h  ray.h  scene.h  stack.h  unused.h
blazert/bvh/: aabb.h  accel.h  bbox.h  binbuffer.h  builder.h  intersect.h  node.h  options.h  sah.h  statistics.h
blazert/embree/: scene.h
blazert/embree/primitives/: EmbreeCylinder.cpp  EmbreeCylinder.h  EmbreeGeometryObject.h  EmbreePlane.cpp  EmbreePlane.h  EmbreeSphere.cpp  EmbreeSphere.h
blazert/primitives/: cylinder.h  plane.h  sphere.h  trimesh.h  trimesh_distance.h
cmake/: blazert.cmake.in  build_options.cmake  compare_image_test.cmake  compiler_warnings.cmake  make_single_header.cmake  static_analysis.cmake
doc/html/: annotated.html  classblazert_1_1BlazertScene.html  classes.html  files.html  functions.html  index.html
doc/html/search/: all_2.js  all_4.js  all_5.js  classes_0.js  functions_1.js  functions_2.js  variables_0.js
doc/source/: conf.py
doc/xml/: README_8md.xml  classblazert_1_1BlazertScene.xml  index.xml  namespaceblazert.xml
docs/: requirements.txt
docs/html/: classblazert_1_1BlazertScene-members.html  dir_fa2540dfdc41c03c14f4d1ba7eafe9f2.html  functions_func.html  functions_vars.html  scene_8h.html  scene_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_3.js  files_0.js  functions_0.js  searchdata.js
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  roadmap.rst
docs/source/API/: api.rst
docs/source/build_blazert/: build_unix.rst  build_windows.rst  configuration.rst  dependencies.rst  index.rst  packages.rst
docs/source/usage/: index.rst  low_level_api.rst  scene.rst
docs/source/usage/scene/: minimal_example.rst
docs/xml/: dir_fa2540dfdc41c03c14f4d1ba7eafe9f2.xml  indexpage.xml  scene_8h.xml
examples/: CMakeLists.txt
examples/baseline/: renderer.ppm
examples/benchmark_blaze/: CMakeLists.txt  main.cc  tiny_obj_loader.cc
examples/common/: cnpy.cc  cnpy.h  progress_bar.h  stb_image_write.h  tiny_obj_loader.cc  tiny_obj_loader.h
examples/creep/: CMakeLists.txt  creep.ipynb  creep_visit.py  main.cc  raypath.h  raypath_header.h
examples/deflate/: CMakeLists.txt  OriginMesh.h  OriginSphere.h  constants.h  main.cc
examples/fillvolume/: CMakeLists.txt  main.cc
examples/geometry_template/: GEOM_TEMPLATE.h
examples/path_tracer/: CMakeLists.txt  main.cc
examples/renderer/: CMakeLists.txt  renderer.cc
examples/scene/: CMakeLists.txt  main.cc  tiny_obj_loader.cc
examples/scene_embree/: CMakeLists.txt  main.cc  tiny_obj_loader.h
examples/scene_mesh/: CMakeLists.txt  main.cc
examples/scene_primitives/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  cases_aabb.ipynb  test_aabb.cpp  test_helpers.h  test_main.cpp  test_math.cpp  test_misc.cpp  test_scene.cpp
test/doc/: cylinder_distance_to_surface.ipynb  test_intersect.ipynb
test/test_bvh/: test_intersect.cpp
test/test_embree_primitives/: test_EmbreeCylinder.cpp  test_EmbreePlane.cpp  test_EmbreeScene.cpp  test_EmbreeSphere.cpp
test/test_functions/: cases_aabb.ipynb  test_aabb.cpp
test/test_functions/.ipynb_checkpoints/: cases_aabb-checkpoint.ipynb
test/test_primitives/: assert_helper.h  test_cylinder.cpp  test_plane.cpp  test_sphere.cpp  test_trimesh.cpp
