include_directories(${BLAZE_INCLUDE_DIRS})
add_subdirectory(benchmark_blaze)
add_subdirectory(scene_mesh)
add_subdirectory(path_tracer)
add_subdirectory(renderer)
add_subdirectory(scene_primitives)
add_subdirectory(fillvolume)
add_subdirectory(creep)
add_subdirectory(deflate)

add_subdirectory(em_tracer)